--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header>
+  <h4>Stanislaw Karhapoltsew</h4>
+  <ul>
+    <li>Home</li>
+    <li>Product</li>
+    <li>Pricing</li>
+    <li>Contact</li>
+  </ul>
+</header>
